<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/drawview_reset"
        android:title="@string/menu_reset"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/drawview_save"
        android:title="@string/menu_save"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/drawview_color"
        android:title="@string/menu_color"
        android:visible="true"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/color_accent"
                    android:title="@string/menu_color_accent"/>
                <item
                    android:id="@+id/color_green"
                    android:title="@string/menu_color_green"/>
                <item
                    android:id="@+id/color_blue"
                    android:title="@string/menu_color_blue"/>
                <item
                    android:id="@+id/color_yellow"
                    android:title="@string/menu_color_yellow"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/drawview_width"
        android:title="@string/menu_stroke_width">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/width_1"
                    android:title="@string/menu_width_1"/>
                <item
                    android:id="@+id/width_3"
                    android:title="@string/menu_width_3"/>
                <item
                    android:id="@+id/width_5"
                    android:title="@string/menu_width_5"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_blur"
        android:title="@string/menu_blur"/>
    <item
        android:id="@+id/menu_emboss"
        android:title="@string/menu_emboss"/>

</menu>